Refactor CMakeLists.txt
Change C++ standard to the latest available version.
Execute MacOS-related build steps only when running
on an Apple OS.
Only execute *deployqt step if the build type is
"Release" to speed-up debug build time.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(TodoList)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
@@ -9,8 +9,7 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt5 COMPONENTS Quick REQUIRED)
 qt5_add_resources(RESOURCES qml.qrc)
 
-add_executable(TodoList
-        MACOSX_BUNDLE
+set(SOURCES
         addtodoviewmodel.cpp
         addtodoviewmodel.h
         listviewmodel.cpp
@@ -19,19 +18,21 @@ add_executable(TodoList
         todolist.cpp
         todolist.h
         todomodel.cpp
-        todomodel.h
-        macos/icon.icns
-        ${RESOURCES})
+        todomodel.h)
 
-set_source_files_properties(macos/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
-set_target_properties(TodoList PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PROJECT_SOURCE_DIR}/macos/Info.plist)
+if (APPLE)
+    add_executable(TodoList MACOSX_BUNDLE ${SOURCES} macos/icon.icns ${RESOURCES})
+    set_source_files_properties(macos/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+    set_target_properties(TodoList PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PROJECT_SOURCE_DIR}/macos/Info.plist)
+    find_program(DEPLOY_QT_EXECUTABLE macdeployqt ${CMAKE_PREFIX_PATH})
+endif()
 
 target_link_libraries(TodoList Qt5::Quick)
 
-find_program(MACDEPLOYQT_EXECUTABLE macdeployqt ${CMAKE_PREFIX_PATH})
-
-add_custom_command(TARGET TodoList POST_BUILD
-        COMMAND "${MACDEPLOYQT_EXECUTABLE}"
-        "$<TARGET_FILE_DIR:TodoList>/../.."
-        -qmldir=${PROJECT_SOURCE_DIR}
-        COMMENT "Running macdeployqt...")
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+    add_custom_command(TARGET TodoList POST_BUILD
+            COMMAND "${DEPLOY_QT_EXECUTABLE}"
+            "$<TARGET_FILE_DIR:TodoList>/../.."
+            -qmldir=${PROJECT_SOURCE_DIR}
+            COMMENT "Running *deployqt...")
+endif()
