--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,12 @@ if (APPLE)
     add_executable(TodoList MACOSX_BUNDLE ${SOURCES} macos/icon.icns ${RESOURCES})
     set_source_files_properties(macos/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
     set_target_properties(TodoList PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PROJECT_SOURCE_DIR}/macos/Info.plist)
-    find_program(DEPLOY_QT_EXECUTABLE macdeployqt ${CMAKE_PREFIX_PATH})
+    set(ARTIFACT_PATH $<TARGET_FILE_DIR:TodoList>/../..)
+    find_program(DEPLOY_QT_EXECUTABLE macdeployqt)
+elseif(WIN32)
+    add_executable(TodoList WIN32 ${SOURCES} ${RESOURCES})
+    set(ARTIFACT_PATH $<TARGET_FILE_DIR:TodoList>)
+    find_program(DEPLOY_QT_EXECUTABLE windeployqt)
 endif()
 
 target_link_libraries(TodoList Qt5::Quick)
@@ -32,7 +37,7 @@ target_link_libraries(TodoList Qt5::Quick)
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_custom_command(TARGET TodoList POST_BUILD
             COMMAND "${DEPLOY_QT_EXECUTABLE}"
-            "$<TARGET_FILE_DIR:TodoList>/../.."
+            "${ARTIFACT_PATH}"
             -qmldir=${PROJECT_SOURCE_DIR}
             COMMENT "Running *deployqt...")
 endif()
