Improve the build process on windows
Put generated deployable binaries into build's
"output" subdirectory and run windeployqt there
so that the artifact, that will be deployed
to user machines, won't have such unnecessary files
as make files etc.
Remove "output" directory on "clean" target execution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,12 @@ elseif(WIN32)
     add_executable(TodoList WIN32 ${SOURCES} ${RESOURCES})
     if(CMAKE_BUILD_TYPE STREQUAL "Release")
         find_program(DEPLOY_QT_EXECUTABLE windeployqt)
+        set(OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/output")
         add_custom_command(TARGET TodoList POST_BUILD
-                COMMAND "${DEPLOY_QT_EXECUTABLE}"
-                $<TARGET_FILE_DIR:TodoList>
-                -qmldir=${PROJECT_SOURCE_DIR}
+                COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_DIR}
+                COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:TodoList> ${OUTPUT_DIR}
+                COMMAND "${DEPLOY_QT_EXECUTABLE}" ${OUTPUT_DIR} -qmldir=${PROJECT_SOURCE_DIR}
+                BYPRODUCTS ${OUTPUT_DIR}
                 COMMENT "Running windeployqt...")
     endif()
 endif()
