Implement initial version of Android compilation
Add a submodule, that defines a macro, used to compile
an android target.
Move all android sources to the android/sources
directory.
In addition to all the normal environment variables,
to build an .apk you need to specify additional
following CMake command line arguments:
-DCMAKE_TOOLCHAIN_FILE
-DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON
-DANDROID_PLATFORM=26
The compiled apk is only for a single platform at
the moment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,11 @@ elseif(WIN32)
                     COMMENT "NSIS executable was not found - skipping installer compilation.")
         endif ()
     endif()
+elseif(ANDROID)
+    add_library(TodoList SHARED ${SOURCES} ${RESOURCES})
+    include(android/cmake/AddQtAndroidApk.cmake)
+    add_qt_android_apk(TodoListApk TodoList
+            PACKAGE_SOURCES ${CMAKE_SOURCE_DIR}/android/sources)
 endif()
 
 target_link_libraries(TodoList Qt5::Quick)
